< p > fix color contrast

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -15,7 +15,8 @@
         align-items: flex-start;
 
         p {
-            color: #737373;
+            // color: #737373;
+            color: #545454;
         }
 
         span {
