--- a/style/_plan.scss
+++ b/style/_plan.scss
@@ -11,7 +11,8 @@
         text-align: center;
 
         p {
-            color: #737373;
+            // color: #737373;
+            color: #545454;
         }
     }
 
@@ -30,7 +31,8 @@
             gap: .5rem;
 
             p {
-                color: #737373;
+                // color: #737373;
+                color: #545454;
                 font-weight: 500;
             }
 
@@ -53,7 +55,8 @@
                 display: flex;
                 align-items: flex-start;
                 gap: .5rem;
-                color: #737373;
+                // color: #737373;
+                color: #545454;
             
             }
         }
